Fixed the gap under the calender content

--- a/entrak/static/css/popup_report.css
+++ b/entrak/static/css/popup_report.css
@@ -115,10 +115,7 @@ body {
     background-color: #F5F5F5;
 }
 
-.calendar-content {
-    background-color: #F5F5F5;
-    /* height: 431px; */
-}
+.calendar-content {}
 
 @media print {
 body {-webkit-print-color-adjust: exact;}
@@ -138,7 +135,7 @@ body {-webkit-print-color-adjust: exact;}
 }
 
 .top-section {
-    /* background-color: #f5f5f5; */
+    background-color: #f5f5f5;
 }
 
 .top-section .side-bar {
